Applied some fixes and updates to Meteor app

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
                 <p>The Magic in My Art and Heart</p>
-                <p>For me creation is a dialogue with the world. I listen to voices that could lead my hand, and watch things that appeal to my eyes. I don’'t always know when I will start working on my art. Perhaps it will be five minutes. Or five hours. Or five days.</p>
+                <p>For me creation is a dialogue with the world. I listen to voices that could lead my hand, and watch things that appeal to my eyes. I don't always know when I will start working on my art. Perhaps it will be five minutes. Or five hours. Or five days.</p>
 
                 <p>I can stop right in the middle of my studio after seeing something that attracts my attention. It could be a broken mechanism or an interesting combination of colorful papers and cardboards. Or just a torn shoe lace tenderly hugging another torn shoe lace, the two of them starting a new drama for me.</p>
 
