--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -1,1 +1,3 @@
-/* Add here all your css styles (customizations) */
+.parallax-quote {
+    background: url(/img/patterns/16.jpg) 50% 0 repeat fixed !important;
+}
