Initial Commit in this branch

--- a/client/templates/common/logout.html
+++ b/client/templates/common/logout.html
@@ -1,7 +1,11 @@
 ﻿<template name="logout">
+ 
+    <li>
 
-    <p> Logged out </p>
-    
-    {{> defaultLayout }}
+        <a href="#" id="logout">
+            logout
+        </a>
+
+    </li>
 
 </template>
