--- a/client/templates/common/navbar.html
+++ b/client/templates/common/navbar.html
@@ -40,18 +40,13 @@
                             </a>
                         </li>
 
-                        
-                            <li>
-                                
-                                <a href="{{pathFor 'logout'}}">
-                                    logout
-                                </a>
-                                
-                            </li>
-                        
-                                      
-                        
+                        {{#if currentUser}}
+                            
+                        {{> logout}}
 
+                        {{/if}}
+                         
+                        
                         <!-- using login template > login here leads difficulty in  customization of Accounts.ui package  -->
                         <!-- Going for own Custom login here -->
 
