--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -5,10 +5,11 @@
             <h2 class="title-v2 title-center">GALLERY</h2>
         </div>
 
+        {{#if currentUser}}
         
         {{> dropzone}}
         
-
+        {{/if}}
 
         <!-- Cube Portfolio -->
         <div class="cube-portfolio container margin-bottom-20">
