--- a/client/templates/common/logout.html
+++ b/client/templates/common/logout.html
@@ -1,5 +1,6 @@
 ﻿<template name="logout">
  
+    {{#if username}}
     <li>
 
         <a href="#" id="logout">
@@ -7,5 +8,7 @@
         </a>
 
     </li>
+
+    {{/if}}
 
 </template>
