--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -5,7 +5,7 @@
             <h2 class="title-v2 title-center">GALLERY</h2>
         </div>
 
-        {{#if currentUser}}
+        {{#if username}}
         
         {{> dropzone}}
         
