--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -1,9 +1,7 @@
 <template name="image">
     <div class="cbp-item">
-        
-        <a class="delete-image">
-            <i class="fa fa-trash fa-2x"></i>
-        </a>
+            
+ 
           <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
            data-title="World Clock Widget<br>by Paul Flavius Nechita">
             <div class="cbp-caption-defaultWrap">
@@ -13,10 +11,18 @@
             <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
-                        <div class="cbp-l-caption-title">Art name</div>
-                        <div class="cbp-l-caption-desc">short desc</div>
+                        <div class="cbp-l-caption-title">                                                    
+                        <a class="add-artname">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                        {{artDescription}} 
+                             <a class="delete-image">
+                             <i class="fa fa-trash fa-2x"></i>
+                        </a>
+                        <br /> <br />
                     </div>
-                </div>
+                 </div>
+              </div>
             </div>
         </a>
     </div>
