--- a/client/templates/common/login.html
+++ b/client/templates/common/login.html
@@ -1,18 +1,24 @@
 ﻿
 <template name="login">
 
-        <div class="container">
+    {{#if username}}
+    <center><h1>Welcome {{username}}  </h1></center>
+    <br />
+    {{else}}
+         <div class="container">
             <form class="form-signin">
                 <h2 class="form-signin-heading">Sign In </h2>
                 <label for="email" class="sr-only">Email</label>
                 <input type="text" id="email" name="email" class="form-control" placeholder="email" required autofocus>
                 <label for="password" class="sr-only">Password</label>
                 <input type="password" id="password" name="password" class="form-control" placeholder="password" required autofocus>
+                <br />
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
-                
-            </form>
+              
+            </form>       
             <br />
         </div>
-   
-  
-</template>
+    {{/if}} 
+
+
+</template> 
