--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -1,13 +1,8 @@
 ﻿
 <template name="addInfo">
     <!-- Button trigger modal -->
-    <div class="add-art">
-        <a class="artname" data-toggle="modal" data-target="#myModal">
 
-            <i class="fa fa-plus"></i>
-        </a>
-        
-    </div>
+   
     <!-- Modal -->
    
      <div class="modal fade" id="myModal" role="dialog" aria-labelledby="myModalLabel">
@@ -20,9 +15,17 @@
                         <form class="add-image-info">
                             <div class="form-group">
                                 <label>Art Description</label>
-                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ...."></textarea>
-                            </div>
-                            
+                                <input type="text" class="form-control" id="name" name="artdescription" placeholder="Description ....">
+                             </div>
+                                <div class="form-group">
+                                    <label>Title</label>
+                                    <input type="text" class="form-control" id="name" name="title" placeholder="title">
+                                </div>
+                             <div class="form-group">
+                                    <label>Category</label>
+                                    <textarea class="form-control" id="story" name="story"></textarea>
+                            </div>     
+                           
                             <button type="submit" class="btn btn-primary">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </form>
