--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -1,31 +1,31 @@
 <template name="image">
     <div class="cbp-item">
-          <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
+        <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
            data-title="World Clock Widget<br>by Paul Flavius Nechita">
-              
+
             <div class="cbp-caption-defaultWrap">
                 <img src="{{url}}" />
-
             </div>
-              </a>
+        </a>            
             <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignLeft">
                     <div class="cbp-l-caption-body">
                         <div class="cbp-l-caption-title">                                                    
-                           
+                            <div class="add-art">
+                                <a class="artname" data-toggle="modal" data-target="#myModal">
+                                   <i class="fa fa-plus">  </i>           
+                                 </a>
+                             </div>
                             {{> addInfo}} 
                             {{artDescription}} 
-                            
-                            {{#if username}}
                               <a class="delete-image">
                               <i class="fa fa-trash fa-2x"></i>
-                                 
                               </a>
-                            {{/if}}
                            
                     </div>
                  </div>
               </div>
             </div>        
-    </div>
+  
+          </div>
 </template>
