fix for addInfo update

--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -26,7 +26,7 @@
                                     <textarea class="form-control" id="story" name="story"></textarea>
                             </div>     
                            
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary" id="save">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </form>
                     </div>
