--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -12,8 +12,8 @@
                     <div class="cbp-l-caption-body">
                         <div class="cbp-l-caption-title">                                                    
                             <div class="add-art">
-                                <a class="artname" data-toggle="modal" data-target="#myModal">
-                                   <i class="fa fa-plus">  </i>           
+                                <a class="artname" >
+                                   <i class="fa fa-plus" id="addImageInfo">  </i>
                                  </a>
                              </div>
                             {{> addInfo}} 
