--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -1,7 +1,6 @@
 ﻿
 <template name="addInfo">
-    <!-- Button trigger modal -->
-
+    <!-- Button trigger modal --> 
    
     <!-- Modal -->
    
@@ -14,18 +13,21 @@
                     <div class="modal-body">
                         <form class="add-image-info">
                             <div class="form-group">
-                                <label>Art Description</label>
-                                <input type="text" class="form-control" id="name" name="artdescription" placeholder="Description ....">
-                             </div>
-                                <div class="form-group">
-                                    <label>Title</label>
-                                    <input type="text" class="form-control" id="name" name="title" placeholder="title">
-                                </div>
+                                <label>Title</label>
+                                <input type="text" class="form-control" id="name" name="title" placeholder="title" >
+                              sample
+                            </div>
                              <div class="form-group">
                                     <label>Category</label>
-                                    <textarea class="form-control" id="story" name="story"></textarea>
+                                    <input type="text" class="form-control" id="story" name="category" placeholder="category">
+                                 {{category}}
                             </div>     
-                           
+                            <div class="form-group">
+                                <label>Art Description</label>
+                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ....">
+                                    {{artDescription}}
+                                </textarea>
+                            </div>
                             <button type="submit" class="btn btn-primary" id="save">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </form>
