Images have been  categorized .

--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -14,20 +14,42 @@
         <!-- Cube Portfolio -->
         <div class="cube-portfolio container margin-bottom-20">
             <div class="margin-bottom-30">
-                <div id="filters-container" class="cbp-l-filters-text">
-                    <div data-filter="*" class="cbp-filter-item-active cbp-filter-item"> All </div> |
-                    <div data-filter=".1990" class="cbp-filter-item"> 1990 - 2000 </div> |
-                    <div data-filter=".2000" class="cbp-filter-item"> 2000 - 2013 </div> |
-                    <div data-filter=".2014" class="cbp-filter-item"> 2014 </div> |
-                    <div data-filter=".2015" class="cbp-filter-item"> 2015 </div>
-                </div><!--/end Filters Container-->
-            </div>
+                <div class="categorize">
+                   <p> </p> <button class="btn" data-toggle="collapse" data-target="#category"> All</button> |
+                    <button class="btn" data-toggle="collapse" data-target="#category1"> 1990 - 2000 </button> |
+                    <button class="btn" data-toggle="collapse" data-target="#category2"> 2000 - 2013 </button> |
+                    <button class="btn" data-toggle="collapse" data-target="#category3"> 2014 </button> |
+                    <button class="btn" data-toggle="collapse" data-target="#category4"> 2015 </button> |
 
-            <div id="grid-container" class="cbp-l-grid-gallery">
+                </div><!--/end Filters Container-->
+            </div> 
+            <div id="category" class="collapse in">
                 {{#each images}}
-                    {{> image}}
+                {{> image}}
                 {{/each}}
-            </div><!--/end Grid Container-->
+            </div> 
+
+            <div id="category1" class="collapse">
+                    {{#each images1990}}
+                    {{> image}}
+                    {{/each}}
+            </div>            
+            
+            <div id="category2" class="cbp-l-grid-gallery">
+                {{#each images2000}}
+                {{> image}}
+                {{/each}}
+            </div>
+            <div id="category3" class="cbp-l-grid-gallery">
+                {{#each images2014}}
+                {{> image}}
+                {{/each}}
+            </div>
+            <div id="category4" class="cbp-l-grid-gallery">
+                {{#each images2015}}
+                {{> image}}
+                {{/each}}
+            </div>
         </div>
     
             <!-- End Cube Portfolio -->
