--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -1,10 +1,10 @@
 <template name="image">
     <div class="cbp-item">
-        <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
+        <a href="{{url}}"  data-lightbox="{{category}}" class="cbp-caption cbp-singlePageInline"
            data-title="World Clock Widget<br>by Paul Flavius Nechita">
 
             <div class="cbp-caption-defaultWrap">
-                <img src="{{url}}" />
+                <img src="{{url}}" class="img-thumbnail" />
             </div>
         </a>            
             <div class="cbp-caption-activeWrap">
