--- a/client/templates/layouts/default-layout.html
+++ b/client/templates/layouts/default-layout.html
@@ -1,6 +1,12 @@
+
+<head>
+<link rel="stylesheet" href="lightbox.css">
+</head>
 <body>
-	{{renderPage}}
+    {{renderPage}}
+    
 </body>
+
 <template name="defaultLayout">
 <div class="wrapper">
     {{> navbar}}
@@ -12,6 +18,5 @@
 
     {{> footer}}
 
-    
 </div>
 </template>
