--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -14,19 +14,15 @@
                         <form class="add-image-info">
                             <div class="form-group">
                                 <label>Title</label>
-                                <input type="text" class="form-control" id="name" name="title" placeholder="title" >
-                              sample
+                                <input type="text" class="form-control" id="name" name="title" placeholder="title" value="{{title}}" >
                             </div>
                              <div class="form-group">
                                     <label>Category</label>
-                                    <input type="text" class="form-control" id="story" name="category" placeholder="category">
-                                 {{category}}
+                                    <input type="text" class="form-control" id="story" name="category" placeholder="category" value="{{category}}">
                             </div>     
                             <div class="form-group">
                                 <label>Art Description</label>
-                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ....">
-                                    {{artDescription}}
-                                </textarea>
+                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ...." value="">{{artDescription}}</textarea>
                             </div>
                             <button type="submit" class="btn btn-primary" id="save">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
