--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -10,59 +10,27 @@
         
             <!-- Cube Portfolio -->
             <div class="cube-portfolio container margin-bottom-20">
+            [selected category: {{getCurrentCategory}}]
                 <div class="margin-bottom-30">
                     <div id="filters-container" class="cbp-l-filters-text">
                         <div data-filter="*" class="cbp-filter-item-active cbp-filter-item"> 
-                            <a data-toggle="collapse" data-target='#all'> All ( {{category}} ) </a> |
+                            <a data-toggle="collapse" data-target='#all'> All </a>
                         </div>
                         <div data-filter=".1990" class="cbp-filter-item"> 
-{{allcategorieslinks}}
-                           <a data-toggle="collapse" id="c1" data-target='#category1'>{{category1}}</a> |
-                           <a data-toggle="collapse" data-target='#category2'> {{category2}} |  </a> 
-                           <a data-toggle="collapse" data-target='#category3'> {{category3}} | </a> 
-                           <a data-toggle="collapse" data-target='#category4'> {{category4}} |  </a>
-                           <a data-toggle="collapse" data-target='#category5'> {{category5}} | </a> 
-                           <a data-toggle="collapse" data-target='#category6'> {{category6}} | </a> 
+                            {{#each category}}
+                                <div data-filter="{{this}}" class="cbp-filter-item"> {{this}} | </div>
+                            {{/each}}
                        </div>
                     </div>  <!--/end Filters Container-->
                 </div>
                 <!-- Below Block to be optimized -->
                 <div id="all" class="collapse">
-                    {{#each images category}}
+                    {{#each images getCurrentCategory}}
                     {{> image}}
                     {{/each}}
                 </div>
 
-                <div id="category1" class="collapse">
-                    {{#each imagescategory category1}}
-                    {{> image}}
-                    {{/each}}
-                </div>
-                <div id="category2" class="collapse">
-                    {{#each imagescategory category2}}
-                    {{> image}}
-                    {{/each}}
-                </div>
-                <div id="category3" class="collapse">
-                    {{#each imagescategory category3}}
-                    {{> image}}
-                    {{/each}}
-                </div>
-                <div id="category4" class="collapse">
-                    {{#each imagescategory category4}}
-                    {{> image}}
-                    {{/each}}
-                </div>
-                <div id="category5" class="collapse">
-                    {{#each imagescategory category5}}
-                    {{> image}}
-                    {{/each}}
-                </div>
-                <div id="category6" class="collapse">
-                    {{#each imagescategory category6}}
-                    {{> image}}
-                    {{/each}}
-                </div>
+                
             </div>
 
             <!-- End Cube Portfolio -->
