Collapse in resolved ..

--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -24,7 +24,7 @@
                     </div>  <!--/end Filters Container-->
                 </div>
                 <!-- Below Block to be optimized -->
-                <div id="all" class="collapse">
+                <div id="all" class="collapse in">
                     {{#each images getCurrentCategory}}
                     {{> image}}
                     {{/each}}
