--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -14,7 +14,8 @@
                 <div class="margin-bottom-30">
                     <div id="filters-container" class="cbp-l-filters-text">
                         <div data-filter="*" class="cbp-filter-item-active cbp-filter-item"> 
-                        </div>
+                            <a href="#" data-target='#all'> All </a>
+                         </div>
                         <div data-filter=".1990" class="cbp-filter-item"> 
                             {{#each category}}
                                 <div data-filter="{{this}}" class="cbp-filter-item"> {{this}} | </div>
@@ -23,7 +24,7 @@
                     </div>  <!--/end Filters Container-->
                 </div>
                 <!-- Below Block to be optimized -->
-                <div id="all" class="collapse in">
+                <div id="all">
                     {{#each images getCurrentCategory}}
                     {{> image}}
                     {{/each}}
