--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -1,9 +1,7 @@
-﻿
+
 <template name="addInfo">
     <!-- Button trigger modal --> 
-   
     <!-- Modal -->
-   
      <div class="modal fade" id="myModal" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog">
                 <div class="modal-content">
@@ -14,15 +12,19 @@
                         <form class="add-image-info">
                             <div class="form-group">
                                 <label>Title</label>
-                                <input type="text" class="form-control" id="name" name="title" placeholder="title" value="{{title}}" >
+                                <input class="form-control typeahead" 
+                                       name="title" type="text"
+                                       placeholder="Title .."
+                                       autocomplete="off" value="{{title}}"
+                                     data-source="title" />
                             </div>
                              <div class="form-group">
                                     <label>Category</label>
-                                    <input type="text" class="form-control" id="story" name="category" placeholder="category" value="{{category}}">
+                                    <input type="text" class="form-control" id="story" name="category" placeholder="category" value="">
                             </div>     
                             <div class="form-group">
                                 <label>Art Description</label>
-                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ...." value="">{{artDescription}}</textarea>
+                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ...." value="">  </textarea>
                             </div>
                             <button type="submit" class="btn btn-primary" id="save">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
