--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -13,18 +13,18 @@
                             <div class="form-group">
                                 <label>Title</label>
                                 <input class="form-control typeahead" 
-                                       name="title" type="text"
+                                       name="title" type="text" id="title"
                                        placeholder="Title .."
-                                       autocomplete="off" value="{{title}}"
-                                     data-source="title" />
+                                       autocomplete="on" value="{{#if title}}{{title}}{{/if}}"
+                                     data-source="" />
                             </div>
-                             <div class="form-group">
+                            <div class="form-group">
                                     <label>Category</label>
-                                    <input type="text" class="form-control" id="story" name="category" placeholder="category" value="">
+                                    <input type="text" class="form-control" id="story" name="category" placeholder="category"  autocomplete="on" value="{{#if category}}{{category}}{{/if}}">
                             </div>     
                             <div class="form-group">
                                 <label>Art Description</label>
-                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ...." value="">  </textarea>
+                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ...." value="" autocomplete="on">{{#if artDescription}}{{artDescription}}{{/if}}</textarea>
                             </div>
                             <button type="submit" class="btn btn-primary" id="save">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
