--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -12,19 +12,15 @@
                         <form class="add-image-info">
                             <div class="form-group">
                                 <label>Title</label>
-                                <input class="form-control typeahead" 
-                                       name="title" type="text" id="title"
-                                       placeholder="Title .."
-                                       autocomplete="on" value="{{#if title}}{{title}}{{/if}}"
-                                     data-source="" />
+                                {{> inputAutocomplete settings=settings id="title" name="title" class="form-control" placeholder="Title ..."}}
                             </div>
                             <div class="form-group">
-                                    <label>Category</label>
-                                    <input type="text" class="form-control" id="story" name="category" placeholder="category"  autocomplete="on" value="{{#if category}}{{category}}{{/if}}">
+                                <label>Category</label>
+                                {{> inputAutocomplete settings=settings2 id="category" name="category" class="form-control" placeholder="Category..."}}
                             </div>     
                             <div class="form-group">
                                 <label>Art Description</label>
-                                <textarea class="form-control" id="name" name="artdescription" placeholder="Description ...." value="" autocomplete="on">{{#if artDescription}}{{artDescription}}{{/if}}</textarea>
+                                 {{#textareaAutocomplete settings=settings3 id="artdescription" name="artdescription" class="form-control" placeholder="Description ..."}} {{myStartingText}}{{/textareaAutocomplete}}
                             </div>
                             <button type="submit" class="btn btn-primary" id="save">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
