--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -14,11 +14,11 @@
                 <div class="margin-bottom-30">
                     <div id="filters-container" class="cbp-l-filters-text">
                         <div class="cbp-filter-item-active cbp-filter-item"> 
-                            <a href="#" data-target='#all'> All </a>
+                            <div class="all" data-target='#all'> All </div>
                          </div>
                         <div class="cbp-filter-item"> 
                             {{#each category}}
-                                <div data-filter="{{this}}" class="cbp-filter-item"> {{this}} | </div>
+                              {{#if this}}  <div data-filter="{{this}}" class="cbp-filter-item"> {{this}} !</div> {{/if}}
                             {{/each}}
                        </div>
                     </div>  <!--/end Filters Container-->
