--- a/client/templates/common/pageheader.html
+++ b/client/templates/common/pageheader.html
@@ -2,11 +2,7 @@
     <!--=== Breadcrumbs ===-->
     <div class="breadcrumbs breadcrumbs-light">
         <div class="container">
-            <h1 class="pull-left">About Me</h1>
-            <ul class="pull-right breadcrumb">
-                <li><a href="{{pathFor 'home'}}">Home</a></li>
-                <li class="active">About</li>
-            </ul>
+            <h1 class="pull-left">Larisa Pilinsky</h1>
         </div>
     </div>
     <!--=== End Breadcrumbs ===-->
