--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -9,16 +9,16 @@
         {{/if}}
         
             <!-- Cube Portfolio -->
-            <div class="cube-portfolio container margin-bottom-20">
-            [selected category: {{getCurrentCategory}}]
-                <div class="margin-bottom-30">
-                    <div id="filters-container" class="cbp-l-filters-text">
+            <div class="cube-portfolio container margin-bottom-60">
+            <h3>{{getCurrentCategory}}</h3>
+                <div class="content-xs">
+                    <div id="filters-container" class="cbp-l-filters-text content-xs">
                         <div class="cbp-filter-item-active cbp-filter-item"> 
                             <div class="all" data-target='#all'> All </div>
                          </div>
                         <div class="cbp-filter-item"> 
                             {{#each category}}
-                              {{#if this}}  <div data-filter="{{this}}" class="cbp-filter-item"> {{this}} !</div> {{/if}}
+                              {{#if this}}  | <div data-filter="{{this}}" class="cbp-filter-item"> {{this}} </div> {{/if}}
                             {{/each}}
                        </div>
                     </div>  <!--/end Filters Container-->
