--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -59,22 +59,23 @@
 
             <div class="row">
 
-                <div class="col-md-6">
-                    <div class="thumbnails-v1">
-                        <div class="thumbnail-img">
-                            <img class="img-responsive" src="/img/lark/Larkonhorsewew.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
+                
+                <div class="col-md-8">
                     <div class="text-center margin-bottom-50">
                         <h2 class="title-v2 title-center">BIO</h2>
                     </div>
                     <p>Born in the remote mountains of central Asia,
-                        <font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong> </font>(Larisa Pilinsky)</font> grew up in Ukraine and studied art in Russia. She first became known for her work with the&nbsp;award-winning Bunker Art Group of Armenia —“fellow rebels in abstraction” against Soviet artistic repression. </p>
-                    <p>Since emigrating&nbsp;to the United&nbsp;States in 1991, <font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong></font></font> has been recognized by respected critics and dealers. Her assemblages and, more recently, her paintings, have been featured in more than 30 solo and group shows including the Nickelodeon Animation Studios, the Avatar Art Gallery, the Swedish-American Museum of Art, and the Museums of&nbsp;Contemporary Art in Armenia and Russia. Lark’s work has been selected through&nbsp;juried competitions by the SoHo International Art Competition&nbsp;and the Foundation of Collage Artists of America.</p>
+                        <font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong> </font>(Larisa Pilinsky)</font> grew up in Ukraine and studied art in Russia. She first became known for her work with the&nbsp;award-winning Bunker Art Group of Armenia — "fellow rebels in abstraction" against Soviet artistic repression. </p>
+                    <p>Since emigrating&nbsp;to the United&nbsp;States in 1991, <font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong></font></font> has been recognized by respected critics and dealers. Her assemblages and, more recently, her paintings, have been featured in more than 30 solo and group shows including the Nickelodeon Animation Studios, the Avatar Art Gallery, the Swedish-American Museum of Art, and the Museums of&nbsp;Contemporary Art in Armenia and Russia. Lark's work has been selected through&nbsp;juried competitions by the SoHo International Art Competition&nbsp;and the Foundation of Collage Artists of America.</p>
                     <p><font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong></font></font> creates assemblages by recycling found objects and processing them through spiritual meditation, encouraging images to appear out of her subconscious, awakening both familiar and unfamiliar thoughts in viewers. Learning about her materials by exploring both their formal and their narrative qualities, she simultaneously reformulates them according to her deeply emotional, poetically romantic sense of beauty.</p>
                     <p>Their original functions discarded, their origins long forgotten, the objects she engages and interacts with are free to play imagined roles, resonating within one another and telling countless tales. </p><br>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnails-v1">
+                        <div class="thumbnail-img">
+                            <img class="img-responsive" src="/img/lark/art/pink-mountain-morning.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -83,28 +84,28 @@
 
     <ul class="list-unstyled row portfolio-box-v1">
         <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/main/img12.jpg" alt="">
-            <div class="portfolio-box-v1-in">
-                <h3>Footer art 1</h3>
-                <p>Short description</p>
-            </div>
-        </li>
-        <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/main/img4.jpg" alt="">
-            <div class="portfolio-box-v1-in">
-                <h3>Footer art 2</h3>
-                <p>Short description</p>
-            </div>
-        </li>
-        <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/main/img7.jpg" alt="">
+            <img class="img-responsive" src="/img/lark/art/escapeweb.jpg" alt="">
             <div class="portfolio-box-v1-in">
                 <h3>Footer art 3</h3>
                 <p>Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/main/img17.jpg" alt="">
+            <img class="img-responsive" src="/img/lark/art/where-are-you-.jpg" alt="">
+            <div class="portfolio-box-v1-in">
+                <h3>Footer art 1</h3>
+                <p>Short description</p>
+            </div>
+        </li>
+        <li class="col-md-3 col-sm-6">
+            <img class="img-responsive" src="/img/lark/art/LarkTheVoice-you-want300.jpg" alt="">
+            <div class="portfolio-box-v1-in">
+                <h3>Footer art 2</h3>
+                <p>Short description</p>
+            </div>
+        </li>
+        <li class="col-md-3 col-sm-6">
+            <img class="img-responsive" src="/img/lark/art/escapeweb.jpg" alt="">
             <div class="portfolio-box-v1-in">
                 <h3>Footer art 4</h3>
                 <p>Short description</p>
