--- a/client/templates/common/footer.html
+++ b/client/templates/common/footer.html
@@ -34,7 +34,7 @@
                 <!-- Address -->
                 <div class="col-md-4 map-img md-margin-bottom-40">
                     <div class="headline"><h2>My other websites</h2></div>
-                    <p>You can also see and buy my creations by clicking on these links:</p>
+                    You can also see and buy my creations by clicking on these links:
 
                     <a href="www.larkgalleryonline.com">www.larkgalleryonline.com</a><br/>
                     <a href="www.larkgallery.com">www.larkgallery.com</a><br/>
