--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -10,7 +10,7 @@
 
             <div class="col-sm-8">
                 <div class="overflow-h">
-                    <div class="pull-left">
+                    <div class="pull-left headline1">
                         <h2>LARK (Larisa Pilinsky)</h2>
                         <span>Artist</span>
                     </div>
@@ -39,7 +39,7 @@
     </div>
     <!-- End About Me Block -->
 
-    <!-- Parallax Quote -->
+     <!-- Parallax Quote -->
     <div class="parallax-quote parallax-quote-light parallaxBg">
         <div class="container">
             <div class="parallax-quote-in rounded">
@@ -51,8 +51,6 @@
     <!-- End Parallax Quote -->
 
 
-
-
     <div class="bg-grey content-sm">
 
         <div class="container">
@@ -61,7 +59,7 @@
 
                 
                 <div class="col-md-8">
-                    <div class="text-center margin-bottom-50">
+                    <div class="text-center margin-bottom-50 headline1">
                         <h2 class="title-v2 title-center">BIO</h2>
                     </div>
                     <p>Born in the remote mountains of central Asia,
@@ -80,7 +78,6 @@
             </div>
         </div>
     </div>
-
 
     <ul class="list-unstyled row portfolio-box-v1">
         <li class="col-md-3 col-sm-6">
@@ -112,4 +109,6 @@
             </div>
         </li>
     </ul>
+
+    
 </template>
