--- a/client/templates/common/dropzone.html
+++ b/client/templates/common/dropzone.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div id="dropzone" class="dropzone">
                 <div class="well well-drop-zone">
-                    Drop file(s) here to upload
+                    Drag and drop your images here
                 </div>
             </div>
         </div>
