ignored .idea file
headline style change

--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -55,3 +55,8 @@
 .cbp-l-filters-text .cbp-filter-item{
     font-weight: 700;
 }
+
+div {
+    text-align: justify;
+    text-justify: inter-word;
+}
