--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -12,15 +12,15 @@
                         <form class="add-image-info">
                             <div class="form-group">
                                 <label>Title</label>
-                                {{> inputAutocomplete settings=settings id="title" name="title" class="form-control" placeholder="Title ..."}}
+                                   <input type="text" name="title" class="form-control" placeholder="title ..." value="{{title}}">
                             </div>
                             <div class="form-group">
                                 <label>Category</label>
-                                {{> inputAutocomplete settings=settings2 id="category" name="category" class="form-control" placeholder="Category..."}}
+                                 <input type="text" name="category" class="form-control" placeholder="category ..." value="{{category}}">
                             </div>     
                             <div class="form-group">
                                 <label>Art Description</label>
-                                 {{#textareaAutocomplete settings=settings3 id="artdescription" name="artdescription" class="form-control" placeholder="Description ..."}} {{myStartingText}}{{/textareaAutocomplete}}
+                                <textarea name="artdescription" class="form-control" placeholder="description ...">{{artDescription}}</textarea>
                             </div>
                             <button type="submit" class="btn btn-primary" id="save">Submit</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
